--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,14 @@
 {
   "dependencies": {
+    "@google-cloud/translate": "^8.5.0",
+    "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-translate-api": "^2.3.0",
+    "googletrans": "^1.0.21",
     "mongoose": "^8.9.5",
     "nodemon": "^3.1.9",
     "redis": "^4.7.0"
