--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,18 @@
     "@vitalets/google-translate-api": "^9.2.1",
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
+    "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "google-translate-api": "^2.3.0",
     "googletrans": "^1.0.21",
     "mongoose": "^8.9.5",
+    "node-html-parser": "^7.0.1",
     "nodemon": "^3.1.9",
     "openai": "^4.81.0",
-    "redis": "^4.7.0"
+    "redis": "^4.7.0",
+    "sanitize-html": "^2.14.0"
   },
   "type": "module",
   "scripts": {
