--- a/backend/package.json
+++ b/backend/package.json
@@ -19,13 +19,17 @@
   },
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "cross-env NODE_ENV=test mocha --experimental-modules --timeout 5000 tests/*.test.js --exit",
     "dev": "nodemon index.js",
     "start": "node index.js"
   },
   "devDependencies": {
+    "@babel/register": "^7.25.9",
+    "chai": "^5.1.2",
+    "cross-env": "^7.0.3",
     "eslint": "^9.19.0",
     "jest": "^29.7.0",
+    "mocha": "^11.1.0",
     "supertest": "^7.0.0"
   }
 }
